# bmi-diffusionf-2

./: CMakeLists.txt  README.md
bmi-diffusion/: CMakeLists.txt  README.md  bmi_diffusion.f90  main.f90
example/: bmidiffusionf.out  test.cfg
